[gd_scene load_steps=8 format=3 uid="uid://d3d4smrwgcq4j"]

[ext_resource type="Script" path="res://scripts/enemies/fungus.gd" id="1_sgr2b"]
[ext_resource type="SpriteFrames" uid="uid://br064q4w0bhhb" path="res://assets/enemies/fungus_enemy/fungus_2.tres" id="3_1tdmm"]
[ext_resource type="SpriteFrames" uid="uid://cndb4lwn1a3j2" path="res://assets/enemies/fungus_enemy/fungus_1.tres" id="3_r0mmt"]
[ext_resource type="SpriteFrames" uid="uid://dluftir0ixc5" path="res://assets/enemies/fungus_enemy/fungus_3.tres" id="4_8diwu"]
[ext_resource type="AudioStream" uid="uid://b24s2p4d5xltt" path="res://assets/sound/sfx/enemies/FungusExplode.wav" id="5_8ub1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx67y"]
size = Vector2(14, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_68tdv"]
radius = 12.0

[node name="Fungus" type="CharacterBody2D"]
script = ExtResource("1_sgr2b")
speed_slow = 60.0
zoom_slow = 40.0
web_travel_slow = 150.0
jump_height_slow = 20.0
slow_time = 1.5
sprites = Array[SpriteFrames]([ExtResource("3_r0mmt"), ExtResource("3_1tdmm"), ExtResource("4_8diwu")])
death_sfx = ExtResource("5_8ub1p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_r0mmt")
animation = &"Idle"
speed_scale = 0.1

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_yx67y")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_68tdv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PoofParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 300
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 9.04
direction = Vector2(2.08165e-12, -1)
spread = 90.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
radial_accel_min = 45.1
radial_accel_max = 45.1
damping_min = 60.0
damping_max = 60.0
scale_amount_min = 0.2
scale_amount_max = 2.0

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8ub1p")
volume_db = -20.0
bus = &"SFX"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
